--- a/css/payroll_form.css
+++ b/css/payroll_form.css
@@ -1,3 +1,4 @@
+/* UC 1 */
 * {
     box-sizing: border-box;
 }
@@ -29,15 +30,14 @@ body {
 }
 
 .logo-content-img {
-    border: 0px solid #42515f;
+    border: solid 0px #42515f;
 }
 
 .emp-text {
     font: normal normal bold 20px/25px Montserrat;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     letter-spacing: 0px;
-    color: #82A70C;
-    padding-left: 10px;
+    color: #82a70c;
     text-transform: capitalize;
 }
 
@@ -45,6 +45,7 @@ body {
     color: #42515f;
 }
 
+/* UC 2 */
 .form-content {
     min-height: calc(100% - 80px);
     background-color: #f7f7f7;
@@ -65,9 +66,9 @@ body {
 }
 
 .form-head {
-    font: normal normal bold 28px/37px Roboto;
+    font: normal normal bold 24px/37px Roboto;
     letter-spacing: 0px;
-    color: #42515F;
+    color: #42515f;
     text-transform: capitalize;
     opacity: 1;
     padding-bottom: 20px;
@@ -86,13 +87,13 @@ body {
 }
 
 label {
-    padding: 12px 12px 12px 0px;
+    padding: 12px 12px 12px;
     display: inline-block;
 }
 
 .text {
     font-size: 16px;
-    color: #43515f;
+    color: #42515f;
     opacity: 1;
     font-family: Roboto;
 }
@@ -105,6 +106,7 @@ label {
     resize: vertical;
 }
 
+/* UC 3 */
 .profile-radio-content {
     display: flex;
     flex-direction: row;
@@ -120,4 +122,90 @@ label {
     width: 40px;
     border-radius: 50%;
     margin-left: 12px;
+}
+
+/* UC 5 */
+select {
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    font: normal normal normal 16px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    background-color: transparent;
+}
+
+/* UC 6 */
+.buttonParent {
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.button {
+    font-size: 20px;
+    font-family: Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    opacity: 1;
+    background: transparent;
+    border: none;
+    font-weight: 400;
+    min-width: 140px;
+    padding: 7px 7px;
+    border: 1px solid #707070;
+    cursor: pointer;
+}
+
+.submitButton {
+    border: none;
+    background-color: #f5f5f5;
+    margin-right: 30px;
+}
+
+.cancelButton {
+    text-decoration: none;
+    text-align: center;
+}
+
+@media only screen and (max-width: 960px) {
+    .cancelButton {
+        margin-left: 0px;
+    }
+    .form {
+        width: 85%;
+        padding: 44px 20px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .form {
+        margin-top: 10px;
+    }
+    .row {
+        flex-direction: column;
+    }
+    .uploadButton {
+        justify-content: flex-start;
+    }
+    .profile-radio-content {
+        flex-flow: wrap;
+    }
+    .submit-reset {
+        width: 100%;
+        display: flex;
+        flex-grow: 1;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+    .submitButton {
+        margin: 0;
+    }
+    .button-content {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
 }
