--- a/css/payroll_form.css
+++ b/css/payroll_form.css
@@ -1,11 +1,13 @@
 /* UC 1 */
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    margin: 0;
+    margin-left: 0;
     height: 100%;
+    background-color: #f7f7f7;
 }
 
 .header {
@@ -39,6 +41,7 @@ body {
     letter-spacing: 0px;
     color: #82a70c;
     text-transform: capitalize;
+    padding-left: 10px;
 }
 
 .emp-payroll {
@@ -46,6 +49,7 @@ body {
 }
 
 /* UC 2 */
+
 .form-content {
     min-height: calc(100% - 80px);
     background-color: #f7f7f7;
@@ -53,6 +57,7 @@ body {
     justify-content: center;
     align-items: center;
     border: 0px solid green;
+    margin-top: 20px;
 }
 
 .form {
@@ -72,6 +77,7 @@ body {
     text-transform: capitalize;
     opacity: 1;
     padding-bottom: 20px;
+    margin-left: 50px;
 }
 
 .row-content {
@@ -80,6 +86,9 @@ body {
     margin-bottom: 10px;
     align-items: center;
     border: 0px solid green;
+    margin-top: 40px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .label {
@@ -87,7 +96,7 @@ body {
 }
 
 label {
-    padding: 12px 12px 12px;
+    padding: 12px 12px 12px 0;
     display: inline-block;
 }
 
@@ -104,9 +113,11 @@ label {
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
+    
 }
 
 /* UC 3 */
+
 .profile-radio-content {
     display: flex;
     flex-direction: row;
@@ -125,6 +136,7 @@ label {
 }
 
 /* UC 5 */
+
 select {
     padding: 12px;
     border: 1px solid #ccc;
@@ -134,9 +146,11 @@ select {
     letter-spacing: 0px;
     color: #42515f;
     background-color: transparent;
+    margin-right: 20px;
 }
 
 /* UC 6 */
+
 .buttonParent {
     display: flex;
     margin-bottom: 10px;
@@ -158,6 +172,9 @@ select {
     padding: 7px 7px;
     border: 1px solid #707070;
     cursor: pointer;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top : 20px;
 }
 
 .submitButton {
@@ -169,10 +186,18 @@ select {
     text-decoration: none;
     text-align: center;
     padding: 20px 40px;
+    
 }
 
-.resetButton{
+.resetButton {
     padding: 20px 40px;
+}
+
+error-output{
+    margin-left: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color: red;
 }
 
 @media only screen and (max-width: 960px) {
@@ -209,7 +234,7 @@ select {
     .submitButton {
         margin: 0;
     }
-    .button-content {
+    .buttonParent {
         flex-direction: column-reverse;
         align-items: flex-start;
     }
