--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,11 @@
-/* UC 1 */
+/* Uc 1 */
 
 * {
   box-sizing: border-box;
 }
 
-body {
-  margin-left: 0;
+html body {
+  margin: 0;
   height: 100%;
   background-color: #f7f7f7;
 }
@@ -50,192 +50,123 @@ body {
 
 /* UC 2 */
 
-.form-content {
-  min-height: calc(100% - 80px);
-  background-color: #f7f7f7;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 0px solid green;
-  margin-top: 20px;
-}
-
-.form {
-  width: 65%;
-  padding: 44px 60px;
-  background: #ffffff 0% 0% no-repeat padding-box;
-  box-shadow: 0px 3px 6px #00000029;
-  border: 1px solid #f5f5f5;
-  border-radius: 8px;
-  opacity: 1;
-}
-
-.form-head {
-  font: normal normal bold 24px/37px Roboto;
+.add-button {
+  font: normal normal normal 22px/29px Roboto;
   letter-spacing: 0px;
-  color: #42515f;
-  text-transform: capitalize;
+  color: #ffffff;
+  background: #82A70C 0% 0% no-repeat padding-box;
+  border-radius: 5px;
   opacity: 1;
-  padding-bottom: 20px;
-  margin-left: 50px;
+  border: none;
+  padding: 5px 18px;
+  outline: none;
+  cursor: pointer;
+  text-decoration: none;
 }
 
-.row-content {
+.main-content {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - 80px);
+  background-color: #f7f7f7;
+  padding: 30px 0 10px;
+  box-sizing: border-box;
+}
+
+.employee-header {
   display: flex;
   flex-direction: row;
-  margin-bottom: 10px;
+  justify-content: space-between;
   align-items: center;
-  border: 0px solid green;
-  margin-top: 30px;
-  margin-left: 50px;
-  margin-right: 50px;
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 25px;
 }
 
-.label {
-  min-width: 140px;
-}
-
-label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
-}
-
-.text {
-  font-size: 16px;
+.emp-detail-text {
+  font: normal normal bold 24px/25px Roboto;
+  letter-spacing: 0px;
   color: #42515f;
   opacity: 1;
-  font-family: Roboto;
 }
 
-.input {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-  
+.emp-count {
+  background-color: #82a70c;
+  color: #ffffff;
+  border-radius: 42%;
+  font-size: 16px;
+  width: 26px;
+  text-align: center;
+  display: inline-block;
 }
 
 /* UC 3 */
 
-.profile-radio-content {
-  display: flex;
-  flex-direction: row;
+.table-main {
+  width: 80%;
+  margin: 0 auto;
+  overflow: auto;
 }
 
-.profile-radio-content>label {
+.table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 15px;
+  min-width: 800px;
+}
+
+td, th {
+  text-align: left;
+  padding: 5px 8px;
+  /* border: 1px solid #dddddd; */
+}
+
+th {
+  background: #42515f;
+  border-radius: 3px 3px 0px 0px;
+  text-align: left;
+  font: normal normal medium 18px/24px Roboto;
+  letter-spacing: 0px;
+  color: #ffffff;
+  text-transform: uppercase;
+  opacity: 1;
+  border: 0px solid #dddddd;
+}
+
+tr:not(:first-child) {
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #e3e3e3;
+  border-radius: 3px;
+}
+
+td {
+  font: normal normal normal 14px/21px Roboto;
+  letter-spacing: 0px;
+  color: #3d3d3d;
+  opacity: 1;
+}
+
+td:first-child {
   display: flex;
-  flex-direction: row;
   align-items: center;
 }
 
-.profile {
-  width: 40px;
-  border-radius: 50%;
-  margin-left: 12px;
+td img:first-child {
+  margin-right: 10px;
 }
 
-/* UC 5 */
-
-select {
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-  font: normal normal normal 16px Roboto;
-  letter-spacing: 0px;
-  color: #42515f;
-  background-color: transparent;
-  margin-right: 20px;
-}
-
-/* UC 6 */
-
-.buttonParent {
-  display: flex;
-  margin-bottom: 10px;
-  justify-content: space-between;
-  margin-top: 20px;
-}
-
-.button {
-  font-size: 20px;
-  font-family: Roboto;
-  letter-spacing: 0px;
-  color: #42515f;
-  opacity: 1;
-  background: #E2E2E2 0% 0% no-repeat padding-box;
-  border: 2px solid #969696;
-  border-radius: 5px;
-  font-weight: 400;
-  min-width: 140px;
-  padding: 7px 7px;
-  border: 1px solid #707070;
+td img {
   cursor: pointer;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top : 10px;
 }
 
-.submitButton {
-  margin-right: 30px;
-  padding: 20px 40px;
-}
-
-.cancelButton {
-  text-decoration: none;
+.dept-label {
+  background-color: #e9fea5;
+  border-radius: 40%;
+  width: fit-content;
+  padding: 1px 7px;
   text-align: center;
-  padding: 20px 40px;
-  
-}
-
-.resetButton {
-  padding: 20px 40px;
-}
-
-error-output{
-  margin-left: 10px;
-  font-size: 12px;
-  font-style: italic;
-  color: red;
-}
-
-@media only screen and (max-width: 960px) {
-  .cancelButton {
-      margin-left: 0px;
-  }
-  .form {
-      width: 85%;
-      padding: 44px 20px;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .form {
-      margin-top: 10px;
-  }
-  .row {
-      flex-direction: column;
-  }
-  .uploadButton {
-      justify-content: flex-start;
-  }
-  .profile-radio-content {
-      flex-flow: wrap;
-  }
-  .submit-reset {
-      width: 100%;
-      display: flex;
-      flex-grow: 1;
-      flex-direction: row-reverse;
-      justify-content: space-between;
-      margin-bottom: 20px;
-  }
-  .submitButton {
-      margin: 0;
-  }
-  .buttonParent {
-      flex-direction: column-reverse;
-      align-items: flex-start;
-  }
+  font-size: 14px;
+  display: inline-block;
+  font-weight: 300;
+  margin-bottom: 8px;
 }
